@@ -7,7 +7,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: image.test,v 1.10 2003/05/08 09:35:41 dkf Exp $
+# RCS: @(#) $Id: image.test,v 1.11 2003/09/17 23:45:35 dgp Exp $
 
 package require tcltest 2.1
 eval tcltest::configure $argv
@@ -86,6 +86,18 @@ test image-1.11 {Tk_ImageCmd procedure, "create" option with same name as main w
     removeFile script
     set x
 } {0 {1 {images may not be named the same as the main window}}}
+test image-1.11 {Tk_ImageCmd, "create" option: do not generated command name in use} -setup {
+    set i [image create bitmap]
+    regexp {^image(\d+)$} $i -> serial
+    incr serial
+    proc image$serial {} {return works}
+    set j [image create bitmap]
+} -body {
+    image$serial
+} -cleanup {
+    rename image$serial {}
+    image delete $i $j
+} -result works
 
 test image-2.1 {Tk_ImageCmd procedure, "delete" option} {
     list [catch {image delete} msg] $msg
